Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-113501

error: no matching function for call to ‘FunctorPrototype(<unresolved overloaded function type>)’

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • P0: Blocker
    • 6.6.0
    • 6.6.0 FF
    • Qt Application Manager
    • None
    • 20303e9fe (dev)

    Description

      agent:2023/05/10 07:15:57 build.go:402: /home/qt/work/install/include/QtCore/qobjectdefs_impl.h:355:51: error: no matching function for call to ‘FunctorPrototype(<unresolved overloaded function type>)’
      agent:2023/05/10 07:15:57 build.go:402:   355 |         using Function = decltype(FunctorPrototype(&std::decay_t<Func>::operator()));
      agent:2023/05/10 07:15:57 build.go:402:       |                                   ~~~~~~~~~~~~~~~~^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
      agent:2023/05/10 07:15:57 build.go:402: /home/qt/work/install/include/QtCore/qobjectdefs_impl.h:336:40: note: candidate: ‘template<class Ret, class Obj, class ... Args> Ret (* QtPrivate::FunctorPrototype(Ret (Obj::*)(Args ...) const))(Args ...)’
      agent:2023/05/10 07:15:57 build.go:402:   336 |     FunctionTypeForTypes<Ret, Args...> FunctorPrototype(Ret(Obj::*)(Args...) const) { return nullptr; }
      agent:2023/05/10 07:15:57 build.go:402:       |                                        ^~~~~~~~~~~~~~~~
      agent:2023/05/10 07:15:57 build.go:402: /home/qt/work/install/include/QtCore/qobjectdefs_impl.h:336:40: note:   template argument deduction/substitution failed:
      agent:2023/05/10 07:15:57 build.go:402: /home/qt/work/install/include/QtCore/qobjectdefs_impl.h:355:51: note:   couldn’t deduce template parameter ‘Ret’
      agent:2023/05/10 07:15:57 build.go:402:   355 |         using Function = decltype(FunctorPrototype(&std::decay_t<Func>::operator()));
      agent:2023/05/10 07:15:57 build.go:402:       |                                   ~~~~~~~~~~~~~~~~^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
      

      Build log: https://testresults.qt.io/logs/qt/qtapplicationmanager/1fd3ac625acdfba61f9b57ccbf913da80b1c7589/LinuxSLES_15_SP4x86_64LinuxSLES_15_SP4x86_64GCCqtci-linux-SLES-15_SP4-x86_64-50-b6a7c0DisableTests_DoNotCompileTestsDuringBuild_Sccache_UseConfigure/c9c3a98a84cbef2eb34e9f407bf2e24bf1c9fcee/build_1689182915/log.txt.gz

      Details: https://testresults.qt.io/coin/integration/qt/qtapplicationmanager/tasks/1689182901

      Tested changes (refs/builds/qtci/dev/1683702538):
      https://codereview.qt-project.org/c/qt/qtapplicationmanager/+/476839/2 Update dependencies on 'dev' in qt/qtapplicationmanager

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            rgriebl Robert Griebl
            janihe Jani Heikkinen
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes