Unbreak the submodule integration

Commit 3bf5b5f8944dd417530b09dd6f1cd568717c8cc1 in qtbase broke our
pattern of using the result of std::bind() as a
QMetaObject::invokeMethod parameter (at least on gcc-10).
The C++ standard describes the return value of std::bind as
"undefined" and that probably doesn't work with the new return value
detection in qtbase on every compiler/c++lib combination.

Change-Id: I66ba16fe2535f1a55b2c0d4c6aadd093aa7543be
Fixes: QTBUG-113501
Reviewed-by: Zoltan Gera <zoltan.gera@qt.io>
Reviewed-by: Volker Hilsheimer <volker.hilsheimer@qt.io>